DeLocate working well, one small bug in the final word the buffer commit.  So usually offset 0xffc is not commiting back to disk, I checked and it is setting the memory, a copy might be better or memory mapps. Either way 99% of the way there.

--- a/src/Reloc/project.json
+++ b/src/Reloc/project.json
@@ -19,7 +19,8 @@
   },
   "commands": {
     "Reloc": "Reloc Reloc",
-    "Extract": "Reloc extract"
+    "Extract": "Reloc extract",
+    "DeLocate": "Reloc DeLocate"
   },
   "compilationOptions": {
     "allowUnsafe": true,
