Changes to allow a second project Reloc.net which is based on classic 4.6.1
Needed to get the class library working for InVtero.net to be able to
dump from physmem

--- a/src/Reloc/Properties/launchSettings.json
+++ b/src/Reloc/Properties/launchSettings.json
@@ -3,7 +3,7 @@
     "DeLocate": {
       "commandName": "DeLocate",
       "commandLineArgs": "dumped.msctf.dll msctf.dll-10000000-564D1E7B.reloc 77740000 delocated.msctf.dll False",
-      "workingDirectory": "D:\\temp\\ctf"
+      "workingDirectory": "D:\\temp\\ctf",
     }
   }
 }
