--- a/src/Reloc/project.json
+++ b/src/Reloc/project.json
@@ -8,14 +8,16 @@
 
   "dependencies": {
     "System.ServiceModel": "1.0.0",
-    "System.ServiceModel.Http": "4.0.11-rc2-23525",
-    "System.ServiceModel.Primitives": "4.1.0-rc2-23525",
-    "System.ServiceModel.Security": "4.0.1-rc2-23525",
-    "System.Collections": "4.0.11-rc2-23525",
-    "System.Linq": "4.0.1-rc2-23525",
-    "System.Xml.XDocument": "4.0.11-beta-23516",
-    "System.Private.ServiceModel": "4.1.0-rc2-23525",
-    "System.Console": "4.0.0-beta-23516"
+    "System.Collections": "4.0.11-rc2-23623",
+    "System.Xml.XDocument": "4.0.11-rc2-23623",
+    "System.Linq": "4.0.1-rc2-23623",
+    "System.ServiceModel.Http": "4.1.0-rc2-23623",
+    "System.ServiceModel.Primitives": "4.1.0-rc2-23623",
+    "System.ServiceModel.Security": "4.0.1-rc2-23623",
+    "System.Runtime": "4.0.21-rc2-23623",
+    "System.IO": "4.0.11-rc2-23623",
+    "System.Resources.ResourceManager": "4.0.1-rc2-23623",
+    "System.Linq.Parallel": "4.0.1-rc2-23623"
   },
   "commands": {
     "Reloc": "Reloc Reloc",
@@ -28,8 +30,15 @@
     "languageVersion": "experimental"
   },
   "frameworks": {
+    "dnx46": {
+      "dependencies": {
+        "System.Console": "4.0.0-rc2-23623",
+        "System.Linq.Expressions": "4.0.11-rc2-23623"
+      }
+    },
     "dnxcore50": {
       "dependencies": {
+        "System.Private.ServiceModel": "4.1.0-rc2-23623"
       }
     }
   }
